--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@
 ExportedObj/
 .consulo/
 *.csproj
+*.vsconfig
 *.unityproj
 *.sln
 *.suo
@@ -70,3 +71,6 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# Custom
+/[Aa]ssets/PolygonBattleRoyale
